# iot-devkit-b-u585-iot02a

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
MXChip/U585AIIQ/app/: CMakeLists.txt  app_threadx.c  app_threadx.h  main.c  main.h  stm32u5xx_it.c  stm32u5xx_it.h  tim_callback.c
MXChip/U585AIIQ/app/startup/: stm32u5xx_hal_msp.c
MXChip/U585AIIQ/cmake/: FindBSP.cmake  FindCMSIS.cmake  FindSTM32HAL.cmake
MXChip/U585AIIQ/lib/: CMakeLists.txt
MXChip/U585AIIQ/lib/stm32cubeu5/: CMakeLists.txt
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/BSP/Components/lps22hh/: README.md
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/BSP/Components/lps22hh/.github/: PULL_REQUEST_TEMPLATE.md
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/BSP/Components/sx8651/: CONTRIBUTING.md  README.md
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/BSP/Components/veml3235/: README.md
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/STM32U5xx_HAL_Driver/: CMakeLists.txt  README.md
MXChip/U585AIIQ/lib/stm32cubeu5/Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal_lptim.h
MXChip/U585AIIQ/lib/threadx/: tx_user.h
cmake/: arm-none-eabi.cmake  utilities.cmake
shared/lib/netxduo/addons/dhcp/: nxd_dhcpv6_client.c
shared/lib/netxduo/addons/mqtt/: nxd_mqtt_client.c  nxd_mqtt_client.h
shared/lib/netxduo/addons/snmp/: nxd_snmp.c
shared/lib/netxduo/addons/web/: nx_web_http_client.c  nx_web_http_common.h
shared/lib/netxduo/addons/websocket/: nx_websocket_client.c  nx_websocket_client.h
shared/lib/netxduo/common/inc/: nx_api.h
shared/lib/netxduo/common/src/: nx_icmpv6_process_packet_too_big.c  nx_icmpv6_validate_options.c  nx_ip_packet_receive.c  nx_ipv4_option_process.c  nx_ipv4_packet_receive.c
shared/lib/netxduo/crypto_libraries/src/: nx_crypto_generic_ciphersuites.c  nx_crypto_hkdf.c
shared/lib/netxduo/nx_secure/inc/: nx_secure_tls.h
shared/lib/netxduo/nx_secure/src/: nx_secure_generate_premaster_secret.c  nx_secure_process_server_key_exchange.c  nx_secure_tls_process_clienthello.c  nx_secure_tls_process_clienthello_extensions.c  nx_secure_tls_process_server_key_exchange.c  nx_secure_tls_psk_identity_find.c  nxe_secure_tls_session_send.c
shared/lib/netxduo/samples/: demo_netxduo_https.c
shared/lib/netxduo/test/regression/nx_secure_test/: nx_secure_tls_1_3_clienthello_length_checking_test.c
shared/lib/threadx/: CMakeLists.txt
shared/lib/threadx/common_smp/inc/: tx_api.h
shared/lib/threadx/ports/cortex_m33/gnu/inc/: tx_port.h
shared/lib/threadx/utility/rtos_compatibility_layers/OSEK/: tx_osek.c
